# icrt

./: .gitignore  DATASET.md  README.md  TRAIN.md  pyproject.toml
config/: dataset_config.json  dataset_config_template.json  droid_dataset_config.json
config/data_config/droid/: epi_len_mapping.json  verb_to_episode.json
config/data_config/icrt_mt/: action_statistics.json  epi_len_mapping_json.json  task_grouping.json  verb_to_episode.json
config/model_config/: custom_transformer.json  custom_transformer_vitl.json  custom_transformer_vits.json  custom_transformer_vittiny.json
icrt/data/: dataset.py  utils.py
icrt/models/backbones/: encoders.py  pos_embed.py  preprocess.py  utils.py
icrt/models/losses/: losses.py
icrt/models/policy/: __init__.py  action_head.py  icrt.py  icrt_wrapper.py  llama.py  pred_head.py  utils.py
icrt/util/: args.py  engine.py  lr_sched.py  misc.py  model_constructor.py
scripts/: eval_fk.py  eval_plot.py  train.py
tools/: convert_droid_icrt.py  inference.ipynb  preprocess_droid.py  visualize_episodes.py
